# GSoC2025_Hbond_PM

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  parse_pdb_files.ipynb  pyproject.toml
docs/source/: conf.py  index.rst
docs/source/notebooks/: comp_vs_exp.ipynb  implicit_vs_explicit.ipynb  parse_pdb_files.ipynb
test_data/: examplefold_pdb_8aw3_model_0.cif
test_data/5da9__1__1.A_1.B__1.E_1.F/: 1.E_protonated.sdf  1.F_protonated.sdf
test_data/templates/: A.cif
validation/: README.md  config.cfg.example  global_vars.py  metrics.py  pinder_dataset_fp_calculation.py  pinder_dataset_fp_calculation_for_testing.py  pinder_dataset_protonate.py  pinder_dataset_protonate_for_testing.py  pinder_dataset_test.ipynb  pinder_dataset_validation.ipynb  plinder_dataset_fp_calculation.py  plinder_dataset_fp_calculation_for_testing.py  plinder_dataset_protonate.py  plinder_dataset_protonate_test.py  plinder_dataset_test.ipynb  plinder_dataset_validation.ipynb  plinder_val_systems.csv  protonate.py
validation/data/: pinder_test_systems.csv  pinder_val_systems.csv  plinder_test_systems.csv  plinder_val_systems.csv
validation/utils/: config.cfg.example  global_vars.py  metrics.py  molecule_helper.py  postprocess.py  protonate.py
